fix: append pad overlapping selected element after zoom out
Related to https://github.com/camunda/camunda-modeler/issues/6019

--- a/assets/create-pad.css
+++ b/assets/create-pad.css
@@ -109,6 +109,7 @@
   justify-content: center;
   width: 28px;
   height: 28px;
+  transform: translateY(-50%);
   border-radius: 4px;
   background-color: color-mix(in srgb, var(--gray-30) 80%, transparent);
   color: white;
